# enter-fellowship

./: .dockerignore  .gitignore  .vercelignore  BATCH_EXTRACTION.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  run_batch_extraction.sh  start_local.sh  test_batch_script.py  vercel.json
api/: index.py
cache_data/: cache.db
gt_pdf/: oab_1.json  oab_2.json  oab_3.json  tela_sistema_1.json  tela_sistema_2.json  tela_sistema_3.json
output/: consolidated_results.json
output/individual/: oab_1.json  oab_2.json  oab_3.json  tela_sistema_1.json  tela_sistema_2.json  tela_sistema_3.json
src/: batch_extract.py  main.py  pipeline.py
src/cache/: cache_key.py  cache_manager.py
src/extraction/: cache_manager.py  llm.py
src/storage/: templates.db
src/storage/cache_data/: cache.db  cache.db-shm  cache.db-wal
src/template/: database.py  field_extractor.py  pattern_learner.py  template_manager.py  template_matcher.py
tests/: cache_llm_integration_test.py  cache_test.py  extract_data_test.py
